@@ -39,6 +39,7 @@
 		<div id="changelog20210309">
 			<ul><br>
 				<li>Fixed BoA base attack</li>
+				<li>Reworked Marionette Control</li>
 				<li>Fixed steal drops list order</li>
 				<li>Updated SQI monsters boss flag</li>
 				<li>Fixed player resistance computation</li>
